--- a/frontend/src/components/UI/button/button.css
+++ b/frontend/src/components/UI/button/button.css
@@ -1,32 +1,23 @@
 .btn {
-  width: 100px;
-  height: 40px;
   border: 1px solid transparent;
   border-radius: 5px;
   letter-spacing: 1.1px;
   cursor: pointer;
 }
 
-.btn-outline-white {
-  background: transparent;
-  color: var(--color-white);
-  border: 1px solid var(--color-white);
+.btn-size-medium {
+  padding: 1rem 2rem;
+  font-size: 1.1rem;
 }
 
-.btn-outline-black-small {
-  background: transparent;
-  color: var(--color-black);
-  border: 1px solid var(--color-white);
-  width: auto;
-  height: auto;
+.btn-size-small {
+  padding: 0.75rem 1.5rem;
   font-size: 1.2rem;
-  padding: 5px 15px;
 }
 
-.btn-outline-black {
-  background: transparent;
-  color: var(--color-black);
-  border: 1px solid var(--color-black);
+.btn-size-large {
+  padding: 1.5rem 3rem;
+  font-size: 1.2rem;
 }
 
 .btn-color-black {
@@ -35,10 +26,26 @@
   border: 1px solid transparent;
 }
 
-.btn-color-light-grey-small {
+.btn-outline-white {
+  background: transparent;
+  color: var(--color-white);
+  border: 1px solid var(--color-white);
+}
+
+.btn-outline-black {
+  background: transparent;
+  color: var(--color-black);
+  border: 1px solid var(--color-white);
+}
+
+.btn-outline-black {
+  background: transparent;
+  color: var(--color-black);
+  border: 1px solid var(--color-black);
+}
+
+.btn-color-light-grey {
   background-color: var(--color-light-grey);
-  width: auto;
-  height: auto;
-  font-size: 1.2rem;
-  padding: 5px 15px;
+  color: var(--color-black);
+  border: 1px solid transparent;
 }
