setting editor, changing form to state, and many more

--- a/frontend/src/components/UI/button/button.css
+++ b/frontend/src/components/UI/button/button.css
@@ -41,5 +41,5 @@
 .btn-outline-black {
   background: transparent;
   color: var(--color-black);
-  border: 1px solid var(--color-white);
+  border: 1px solid var(--color-black);
 }
