working on modals

--- a/frontend/src/components/UI/button/button.css
+++ b/frontend/src/components/UI/button/button.css
@@ -30,6 +30,15 @@
   color: var(--color-black);
 }
 
+.btn-color-red {
+  background-color: var(--color-red-errors);
+  color: var(--color-white);
+}
+
+.btn-icon {
+  background-color: transparent;
+}
+
 .btn-outline-white {
   background: transparent;
   color: var(--color-white);
