--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,9 @@
   --color-black: rgb(32, 32, 32);
   --color-white: rgb(252, 252, 252);
   --color-red-errors: rgb(227, 12, 12);
+  --color-dark-grey: #212529;
+  --color-slighty-dark-grey: #343a40;
+  --color-medium-dark-grey: #495057;
   font-family: "Lato", sans-serif;
   font-size: 12px;
   line-height: 1.5;
