--- a/frontend/src/components/UI/button/button.css
+++ b/frontend/src/components/UI/button/button.css
@@ -50,3 +50,9 @@
   color: var(--color-black);
   border: 1px solid var(--color-black);
 }
+
+:disabled {
+  cursor: not-allowed;
+  filter: brightness(0.2);
+  opacity: 0.7;
+}
