switching adding logic

--- a/frontend/src/components/widgets/FileAdder/fileAdder.css
+++ b/frontend/src/components/widgets/FileAdder/fileAdder.css
@@ -9,3 +9,9 @@
   margin-bottom: 20px;
   border-radius: 10px;
 }
+
+.added-images-container {
+  max-height: 40%;
+  margin-bottom: 10px;
+  overflow-y: scroll;
+}
