--- a/frontend/src/components/UI/FileInput/fileInput.css
+++ b/frontend/src/components/UI/FileInput/fileInput.css
@@ -2,7 +2,7 @@
   width: 50%;
   display: none;
 }
-.choose-file-label {
+.choose-files {
   margin-top: 10px;
   color: grey;
   font-size: 1.1rem;
@@ -15,6 +15,30 @@
   justify-content: center;
   color: grey;
   cursor: pointer;
+  margin-bottom: 20px;
+}
+/* .add-files {
+  margin-top: 10px;
+  color: grey;
+  font-size: 1.1rem;
+  letter-spacing: 1.2px;
+  background: transparent;
+  border: 1px solid transparent;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: grey;
+  cursor: pointer;
+  margin-bottom: 20px;
+} */
+
+.add-files {
+  background-color: var(--color-medium-dark-grey);
+  color: white;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
   margin-bottom: 20px;
 }
 
