--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@
   --color-dark-grey: #212529;
   --color-slighty-dark-grey: #343a40;
   --color-medium-dark-grey: #495057;
-  --color-medium-dark-grey: #6c757d;
+  /* --color-medium-dark-grey: #6c757d; */
   font-family: "Lato", sans-serif;
   font-size: 12px;
   line-height: 1.5;
