--- a/frontend/src/components/UI/FileInput/fileInput.css
+++ b/frontend/src/components/UI/FileInput/fileInput.css
@@ -34,7 +34,7 @@
 } */
 
 .add-files {
-  background-color: var(--color-medium-dark-grey);
+  background-color: var(--color-light-grey);
   color: white;
   padding: 10px;
   margin: 10px;
