--- a/frontend/src/components/UI/addedImg/addedImg.css
+++ b/frontend/src/components/UI/addedImg/addedImg.css
@@ -3,14 +3,16 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: var(--color-light-grey);
+  background-color: var(--color-medium-grey);
   padding: 5px;
   margin-bottom: 10px;
   border-radius: 5px;
+  height: 45px;
 }
 
 .added-img {
-  width: 30px;
+  height: 80%;
+  max-width: 55px;
 }
 
 /* var(--color-light-grey) */
