--- a/frontend/src/components/UI/inputRadio/inputRadio.css
+++ b/frontend/src/components/UI/inputRadio/inputRadio.css
@@ -8,8 +8,8 @@
 .choose-wrapper button {
   border: none;
   background-color: transparent;
-  color: var(--color-black);
-  border: 1px solid var(--color-medium-grey);
+  color: var(--color-light-grey);
+  border: 1px solid var(--color-light-grey);
   border-radius: 5px;
   width: 80px;
   height: 30px;
@@ -41,7 +41,7 @@ input {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--color-black);
+  color: var(--color-light-grey);
 }
 
 .input-radio:checked + label {
