--- a/frontend/src/components/pages/Create/create.css
+++ b/frontend/src/components/pages/Create/create.css
@@ -1,7 +1,8 @@
 .main-create {
-  width: 100%;
+  width: 70%;
   height: auto;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
