--- a/frontend/src/components/widgets/FileAdder/fileAdder.css
+++ b/frontend/src/components/widgets/FileAdder/fileAdder.css
@@ -1,17 +1,17 @@
 .file-adder-wrap {
-  border: 2px dashed var(--color-medium-grey);
+  border: 2px dashed var(--color-light-grey);
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 20px;
   border-radius: 10px;
 }
 
 .added-images-container {
   max-height: 40%;
+  width: 80%;
   margin-bottom: 10px;
   overflow-y: scroll;
 }
