--- a/frontend/src/components/widgets/galleryCard/galleryCard.css
+++ b/frontend/src/components/widgets/galleryCard/galleryCard.css
@@ -4,7 +4,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid var(--color-medium-grey);
+  /* border: 1px solid var(--color-light-grey); */
+  background-color: var(--color-medium-grey);
   border-radius: 5px;
   padding: 10px;
   margin: 10px;
@@ -19,6 +20,21 @@
   margin-right: 40px;
 }
 
-.tags-wrapper span {
+.tag {
+  background-color: var(--color-light-grey);
+  padding: 5px 10px;
   margin: 10px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  height: 20px;
+}
+
+.tag img {
+  margin: 0;
+  margin-right: 5px;
+  max-height: 80%;
 }
