--- a/frontend/src/components/widgets/galleryInputs/galleryInputs.css
+++ b/frontend/src/components/widgets/galleryInputs/galleryInputs.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
-  width: 48%;
+  justify-content: space-between;
+  width: 38%;
   height: 100%;
 }
