--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,14 @@
 :root {
-  --color-medium-grey: rgb(173, 173, 173);
+  /* --color-medium-grey: rgb(173, 173, 173); */
   --color-light-grey: rgb(232, 232, 232);
-  --color-black: rgb(32, 32, 32);
-  --color-white: rgb(252, 252, 252);
-  --color-red-errors: rgb(227, 12, 12);
-  --color-dark-grey: #212529;
-  --color-slighty-dark-grey: #343a40;
-  --color-medium-dark-grey: #495057;
+  --color-black: #1a1c1f;
+  --color-white: #f8f9fa;
+  --color-red-errors: #ff8989;
+  --color-very-dark-grey: #2e3134;
+  --color-medium-grey: #3f4244;
+  --color-light-grey: #7e8081;
+  /* --color-slighty-dark-grey: #343a40;
+  --color-medium-dark-grey: #495057; */
   /* --color-medium-dark-grey: #6c757d; */
   font-family: "Lato", sans-serif;
   font-size: 12px;
@@ -23,8 +25,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  color: var(--color-black);
-  background-color: var(--color-white);
+  color: var(--color-white);
+  background-color: var(--color-very-dark-grey);
 }
 
 #root {
